<resources>
    <string name="app_name">Pastagram</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="submit">Submit</string>
    <string name="take_picture">Take Picture</string>
    <string name="description_here">Description Here...</string>
    <string name="sign_up">Sign Up</string>
    <string name="Login" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>Login
</resources>